--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ PORT=7778
 DB_USER="brains"
 DB_PWD="janganlupa"
 DB_HOST="localhost"
-DB_NAME="simon_batapa"
+DB_NAME="simonbatapa_new"
 SOCK_SERVER='http://localhost:7777'
